EBNF
<main> ::= "init" ":" "{" [<declaration>] [<command>] "}"

<var> ::= <id> | (<id> "," <var>)

<declaration> ::= (<type> ":" <var> <end>) | (<type> ":" <var> <end> <declaration>)

<command> ::= (<allocation> <end> | <if> | <loop> | <while>) | (<allocation> <end> | <if> | <loop> | <while>) <command>

<allocation> ::= <id> "=" (<id> | <number> | <operation> | <bool> | <result> | <string>) | <id>"++" | <id>"--"

<type> ::= "integer" | "decimal" | "string" | "bool"

<operation> ::= (<id> | <number>) <operation_symbol> (<id> | <number>) | (<id> | <number>) <operation_symbol> (<id> | <number>) <operation>


<if> ::= "if" "(" <condition> ")" ":" "{" <command> "}" [<else>]

<else> ::= "else" ":" "{" <command> "}"

<loop> ::= "loop" "(" (<allocation> <end> | <end>) (<condition> <end> | <end>) [<allocation>] ")" ":" "{" <command> "}"

<while> ::= "while" "(" <condition> ")" ":" "{" <command> "}"

<condition> ::= (<result>) | (<result> <logic_symbol> <condition>)

<result> ::= ["!"] (<id> | <bool> | <compare>)

<compare_symbol> ::= ">" | "<" | ">=" | "<=" | "==" | "!="

<compare> ::= (<number> | <id> | <bool> | <string>) <compare_symbol> (<number> | <id> | <bool> | <string>) 

<logic_symbol> ::= "||" | "&&"

<end> ::= ";" 

<number> ::= 0..9+ | 0..9+"."0..9+ | "-"0..9+ | "-"0..9+"."0..9+

<id> ::= (a..z | _)(a..z | _ | 0..9)*

<operation_symbol> ::= "+" | "-" | "*" | "/" | "%"

<bool> ::= "true" | "false"

<string> ::= "\"" ... "\""

<keyword> ::= bool | case | double | else | loop | if | integer | while | init | string | decimal


/************    FIRST    ************/


<main> ::= { "init" }

<var> ::= { variable }

<declaration> ::= { "int", "decimal", "string", "bool" }

<command> ::= { variable, "if", "while", "loop" }

<type> ::= {"int", "decimal", "string", "bool"}

<allocation> ::= { variable }

<operation> ::= { variable, number }

<if> ::= { "if" }

<else> ::= { "else" }

<loop> ::= { "loop" }

<while> ::= { "while" }

<condition> ::= { "!", variable, number, "true", "false", string}

<result> ::= { "!", variable, number, "true", "false", string }

<compare_symbol> ::= { ">", "<", ">=", "<=", "==", "!=" }

<compare> ::= { variable, number, "true", "false", string }

<logic_symbol> ::= { "&&", "||" }

<end> ::= { ";" }

<number> ::= { number }

<id> ::= { variable }

<operation_symbol> ::= { "+", "-", "*", "/", "%" }

<bool> ::= { "true", "false" }

<string> ::= { "'" }


/************    FOLLOW     ************/


<main> ::= { "}" }

<var> ::= { ";" }

<declaration> ::= { ";" }

<command> ::= { "}", ";" }

<type> ::= { variable }

<allocation> ::= { ";", ")", "!", variable, number, "true", "false" },

<operation> ::= { ";" }

<if> ::= { "}" }

<else> ::= { "}" }

<loop> ::= { "}" }

<while> ::= { "}" }

<condition> ::= { ";", ")" }

<result> ::= { ";", ")" }

<compare_symbol> ::= { variable, number, string, "true", "false" }

<compare> ::= { ";", ")" }

<logic_symbol> ::= { variable, number, string, "true", "false" }

<end> ::= { $ }

<number> ::= {"+", "-", "*", "/", "&&", "||", ")", ">", "<", ">=", "<=", "==", "!=", ";"}

<id> ::= {"=", "++", "--", "+", "-", "*", "/", "&&", "||", ")", ">", "<", ">=", "<=", "==", "!="}

<operation_symbol> ::= { variable, number }

<bool> ::= { ";", ")", "&&", "||" }

<string> ::= { ";", ")" }
